[tool.poetry]
name = "loading"
version = "0.1.0"
description = "Matrix data loading and analysis exercise"
authors = ["student <student@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.0"
numpy = "^2.0.0"
matplotlib = "^3.9.0"
requests = "^2.32.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
